# hypothesize

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
.spec/steering/: product.md  standards.md  structure.md  tech.md
examples/acme_support/: CURATED.md  CURATED.yaml  README.md  config.yaml  judge.py  run_filter.py  system.py
examples/hotpotqa/: CURATED.md  CURATED.yaml  README.md  build_dataset.py  config.yaml  run_filter.py  system.py
examples/sarcasm/: README.md  config.yaml  example_output.yaml  system.py
scripts/: README.md  SMOKE_FINDINGS.md  SMOKE_FINDINGS_2.md  SMOKE_FINDINGS_3.md  smoke_test.py
scripts/diagnostics/: RUBRIC_FINDINGS.md  rubric_orientation.py
src/hypothesize/: __init__.py
tests/: README.md  conftest.py  test_skill.py
tests/_fixtures/: assertions.py  factories.py  mock_backend.py
tests/_harness/: test_mock_backend.py  test_parallel_safety.py
tests/_live/: conftest.py  test_anthropic_live.py  test_pipeline_live.py
tests/adapters/: test_auto_alternative.py  test_config.py  test_python_module.py  test_stub_adapters.py
tests/cli/: test_config.py  test_list_cmd.py  test_main.py  test_output.py  test_run.py  test_runner.py  test_setup.py  test_validate.py
tests/core/: test_decompose.py  test_discrimination.py  test_diversity.py  test_generate.py  test_json_extract.py  test_judge.py  test_llm_mock.py  test_rubric_orientation_regression.py  test_types.py
tests/discriminating/: the_sentiment_classifier_mislabels_sarca_2026_04_25.yaml
(+79 files in other folders)
