[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hypothesize"
version = "0.1.0"
description = "Turn LLM failure hypotheses into minimum discriminating regression benchmarks."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Garry"}]
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "click>=8.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "datasets>=2.20",
    "mcp>=0.9.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "pytest-asyncio>=0.24",
    "pytest-xdist>=3.6",
    "pytest-snapshot>=0.9",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
hypothesize = "hypothesize.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/hypothesize"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --timeout=30 --strict-markers"
markers = [
    "live: tests that make real LLM API calls (skipped by default)",
    "slow: tests that take more than 5 seconds",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src/hypothesize"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
